Name:                   symbolic
Version:                0.0
Cabal-version:          >=1.8
Tested-with:            GHC >= 7.10
Build-type:             Simple
Synopsis:               Symbolic computation
Description:
  Efficient symbolic computation library

License:                OtherLicense
License-file:           LICENSE
Author:                 UpHere, Inc.
Maintainer:             Ian-Woo Kim <ianwookim@gmail.com>
Homepage:               https://github.com/uphere-co/nlp-prototype
Bug-reports:            https://github.com/uphere-co/nlp-prototype

Category:               Symbolic Computation
Stability:              Experimental

Extra-source-files:     

source-repository HEAD
  type:                 git
  location:             https://github.com/uphere-co/nlp-prototype
  branch:               master
  tag:                  0.0

Library
  hs-source-dirs:       lib
  Build-depends:        base,
                        binary,
                        bytestring,
                        containers,
                        hashable,
                        language-c,                        
                        lens,
                        MemoTrie,
                        pretty,
                        transformers,
                        unordered-containers,
                        vector
                        

  Exposed-modules:
                        Symbolic.CodeGen
                        Symbolic.Differential
                        Symbolic.Eval
                        Symbolic.Predefined
                        Symbolic.Print
                        Symbolic.Simplify
                        Symbolic.Type

  Other-modules:        

  ghc-options:          -O2 -Wall -funbox-strict-fields
  ghc-prof-options:     -caf-all -auto-all
  
Executable trie
  Main-is:              trie.hs
  hs-source-dirs:       exe

  other-modules:       
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:            
                        
  build-depends:        base                            >= 4.7 && < 4.9,
                        --
                        hashable,
                        MemoTrie,
                        transformers,
                        unordered-containers,
                        vector,
                        --
                        symbolic
